@@ -59,6 +59,7 @@ add_subdirectory(socksstreams)
 add_subdirectory(spellchecker)
 add_subdirectory(stanzaprocessor)
 add_subdirectory(starttls)
+add_subdirectory(statistics)
 add_subdirectory(statuschanger)
 add_subdirectory(statusicons)
 add_subdirectory(traymanager)
