@@ -1,0 +1,2 @@
+HEADERS = statistics.h
+SOURCES = statistics.cpp
